--- a/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
@@ -53,7 +53,6 @@
 
         $("#Update").click(function () {
             var dataObject = { ID: @Request.Params["id"], Detail: $("#Detail").val() };
-            alert($("#Detail").val());
             $.ajax(
             {
                 url: 'http://localhost:13131/api/ExpenseMaster/PUT',
@@ -68,7 +67,7 @@
                 ,
                 error: function (msg) {
                     alert(msg);
-                    //top.location.href = "/ExpenseMaster/Index";
+                    top.location.href = "/ExpenseMaster/Index";
                 }
             });
         });
