--- a/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
@@ -20,18 +20,13 @@
                     @Html.TextBoxFor(a => a.Detail, new { id = "Detail" })
                     @Html.ValidationMessageFor(a => a.Detail)
                 </li>
-                <br />
             </ul>
-            @* ------------------------------------------- tabbar ------------------------------------- *@
-            @* ---------------------------------------------------------------------------------------------------------- *@
 
             <ul class="form-style">
                 <li>
-                    <input type="submit" value="Save" />
+                    <input type="submit" value="Save" id="Update" />
                 </li>
             </ul>
-
-            @* ------------------------------------------- tabbar ------------------------------------- *@
         </form>
 
     }
@@ -40,7 +35,6 @@
 
     $(document).ready(function () {
         var id= @Request.Params["id"];
-        //alert('Round2');
         $.ajax(
        {
            url: 'http://localhost:13131/api/IncomeMaster/'+id,
@@ -58,21 +52,22 @@
 
         $("#Update").click(function () {
             var dataObject = { ID: @Request.Params["id"], Detail: $("#Detail").val() };
+            alert('test');
             $.ajax(
             {
-                url: 'http://localhost:13131/api/IncomeMaster',
+                url: 'http://localhost:13131/api/IncomeMaster/PUT',
                 type: 'PUT',
                 data: dataObject,
                 datatype: 'json',
 
                 success: function (result) {
                     alert('Update is completed');
-                    top.location.href = "/IncomeMaster/IndexIncomeMaster";
+                    window.location.href = "/IncomeMaster/IndexIncomeMaster";
                 }
                 ,
                 error: function (msg) {
                     alert(msg);
-                    //top.location.href = "/ExpenseMaster/Index";
+                    top.location.href = "/ExpenseMaster/Index";
                 }
             });
         });
