--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -135,7 +135,7 @@
 
             $.ajax(
             {
-                url: 'http://localhost:13131/api/BDC/Get',
+                url: 'http://localhost:13131/api/BDC',
                 type: 'GET',
                 datatype: 'json',
                 success: function (data) {
