--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -5,8 +5,6 @@
 <h2>
     JobOrder Create
 </h2>
-@*<link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" type="text/css" />*@
-@*<link href="@Url.Content("~/Content/custom.css")" rel="stylesheet" type="text/css" />*@
 @* =============== Tab *@
 <link href="@Url.Content("~/Content/Tab/easy-responsive-tabs.css")" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/Tab/easyResponsiveTabs.js")" type="text/javascript"></script>
@@ -17,6 +15,8 @@
 @* =============== timepicker *@
 <link href="@Url.Content("~/Content/timepicker/wickedpicker.css")" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/timepicker/wickedpicker.js")" type="text/javascript"></script>
+@* =============== Pager *@
+<script src="@Url.Content("~/Scripts/EditableGrid/Pager.js")" type="text/javascript"></script>
 
     <!-- Modal -->
     <div class="modal fade" id="customerDialog" role="dialog">
@@ -41,10 +41,8 @@
                         </thead>
                         <tbody id="customerBody"></tbody>
                     </table>
+                    @*<ul class="pagination pagination-lg pager" id="myPager"></ul>*@
                 </div>
-                @*<div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>*@
             </div>
 
         </div>
