--- a/Alpha/AlphaMvc/Content/editable/addrowstyle.css
+++ b/Alpha/AlphaMvc/Content/editable/addrowstyle.css
@@ -9,8 +9,8 @@
     img {
     }
     .imgpreview{
-        width: 170px;
-        height: 120px;
+        width: 248px;
+        height: 170px;
         margin-top: 5px;
         background-color:#f5f5f5;
         border-style: solid;
@@ -22,8 +22,11 @@
         font-size: -webkit-xxx-large;
     }
     .img-center{
-        margin-left: 50px;
-        margin-top: 25px;
+        /*margin-left: 50px;
+        margin-top: 25px;*/
+        width: 248px;
+        height: 170px;
+        /*margin-top: 10%;*/
     }
 
     #log {
