--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -11,110 +11,80 @@
 <script src="@Url.Content("~/Scripts/calendar/fullcalendar.min.js")" type="text/javascript"></script>
 
 <script>
-    $(document).ready(function () {
-        function GetEvent()
-        {
-            alert('test0');
-            // 2 คือเดือนที่2 (กุมภาพันธ์)
-            var dataObject = { calendarJobModel: 2 }
-            console.log(dataObject);
-            $.ajax(
-               {
-                   url: 'http://localhost:13131/api/CalendarJobOrder',
-                   type: 'GET',
+function GetDetail(currentMonth) {
+    //Set defaultDate
+    var today = new Date();
+    var dd = today.getDate();
+    var mm = today.getMonth() + 1; //January is 0!
+    var yyyy = today.getFullYear();
+    if (dd < 10) {
+        dd = '0' + dd
+    }
+    if (mm < 10) {
+        mm = '0' + mm
+    }
+    today = yyyy + '-' + mm + '-' + dd;
+
+    var dataObject = { CalendarMonth: currentMonth }
+    $.ajax(
+       {
+           url: 'http://localhost:13131/api/CalendarJobOrder',
+           type: 'GET',
+           async: false,
+           data: dataObject,
+           datatype: 'json',
+           success: function (data) {
+               data = JSON.parse(data);
+               var events = [];
+               for (var i = 0; i < data.Table.length; i++) {
+                   var EWorking = data.Table[i].EWorking.replace('T00:00:00', 'T23:59:00');
+                   var TypeWorking = data.Table[i].TypeWorkingName.substr(0, 1);
+                   events.push({
+                       title: data.Table[i].JobNo + '(' + TypeWorking+')',
+                       url: '/JobOrder/EditJobOrder?id=' + data.Table[i].ID,
+                       start: data.Table[i].SWorking,
+                       end: EWorking
+                       ////id: data.Table[i].ID
+                   });
+               }
+               $('#calendar').fullCalendar({
                    async: false,
-                   data: dataObject,
-                   datatype: 'json',
-                   success: function (data) {
-                       data = JSON.parse(data);
-                       var events = [];
-                        alert('test');
-                        $.each(data, function () {
-                            //alert(index, value);
-
-                            events.push({
-                                //id: value['id']
-                                id: data.Table[i].ID
-                                //all data
-                            });
-                            console.log(value);
-                        });
-                        console.log(events);
-                        return events;
-                        //callback(events);
+                   header: {
+                       left: 'prev,next',
+                       center: 'title',
+                       right: ''
                    },
-                   error: function (msg) {
-                       alert(msg);
-                   }
 
+                   defaultDate: today,
+                   navLinks: true, // can click day/week names to navigate views
+                   editable: true,
+                   eventLimit: true, // allow "more" link when too many events
+                   displayEventTime: false,
+                   events: events
                });
-        }
-        //var event = [{
-        //    title: 'All Day Event',
-        //    start: '2016-12-01'
-        //},
-        //{
-        //    title: 'Long Event',
-        //    start: '2016-12-07',
-        //    end: '2016-12-10'
-        //},
-        //{
-        //    id: 999,
-        //    title: 'Repeating Event',
-        //    start: '2016-12-09T16:00:00'
-        //},
-        //{
-        //    id: 999,
-        //    title: 'Repeating Event',
-        //    start: '2016-12-16T16:00:00'
-        //},
-        //{
-        //    title: 'J00006 (H)',
-        //    start: '2017-01-05'
-        //},
-        //{
-        //    title: 'J00006 (H)',
-        //    start: '2017-01-05'
-        //},
-        //{
-        //    title: 'J00005 (S)',
-        //    start: '2017-01-19'
-        //},
-        //{
-        //    title: 'J00001 (O)',
-        //    start: '2017-01-19'
-        //},
-        //{
-        //    title: 'J00001 (O)',
-        //    start: '2017-01-19'
-        //},
-        //{
-        //    title: 'Job201702-0001 (L)',
-        //    url: '/JobOrder/EditJobOrder?id=5',
-        //    start: '2017-01-19',
-        //},
-        //{
-        //    title: 'Click for Google',
-        //    url: 'http://google.com/',
-        //    start: '2016-12-28'
-        //}];
-        var event = GetEvent();
-        console.log(event);
-        $('#calendar').fullCalendar({
-            async: false,
-			header: {
-				left: 'prev,next',
-				center: 'title',
-				right: ''
-			},
-			defaultDate: '2017-01-18',
-			navLinks: true, // can click day/week names to navigate views
-			editable: true,
-			eventLimit: true, // allow "more" link when too many events
-		    events: event
+           },
+           error: function (msg) {
+               alert(msg);
+           }
 
-		});
-	});
+       });
+}
+$(document).ready(function () {
+    var currentDate = new Date();
+    var currentMonth = currentDate.getMonth() + 1;
+    GetDetail(currentMonth);
+    $('#calendar').on('click', '.fc-next-button', function () {
+        var currentMonth = $('#calendar').fullCalendar('getDate');
+        currentMonth = parseInt(currentMonth.format('M'));
+        GetDetail(currentMonth);
+    });
+    $('#calendar').on('click', '.fc-prev-button', function () {
+        var currentMonth = $('#calendar').fullCalendar('getDate');
+        currentMonth = parseInt(currentMonth.format('M'));
+        alert(currentMonth);
+        GetDetail(currentMonth);
+    });
+});
 
 </script>
 <style>
@@ -131,6 +101,5 @@
         margin: 0 auto;
     }
 </style>
-
 <div id="calendar"></div>
 
