--- a/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
@@ -11,77 +11,148 @@
 <script src="@Url.Content("~/Scripts/calendar/fullcalendar.min.js")" type="text/javascript"></script>
 
 <script>
+    function GetDetail(currentMonth) {
+        //Set defaultDate
+        var today = new Date();
+        var dd = today.getDate();
+        var mm = today.getMonth() + 1; //January is 0!
+        var yyyy = today.getFullYear();
+        if (dd < 10) {
+            dd = '0' + dd
+        }
+        if (mm < 10) {
+            mm = '0' + mm
+        }
+        today = yyyy + '-' + mm + '-' + dd;
 
-	$(document).ready(function() {
+        var dataObject = { CalendarMonth: currentMonth }
+        $.ajax(
+           {
+               url: 'http://localhost:13131/api/CalendarManPower',
+               type: 'GET',
+               async: false,
+               data: dataObject,
+               datatype: 'json',
+               success: function (data) {
+                   data = JSON.parse(data);
+                   var events = [];
+                   for (var i = 0; i < data.Table.length; i++) {
+                       var EWorking = data.Table[i].EWorking.replace('T00:00:00', 'T23:59:00');
+                       events.push({
+                           title: data.Table[i].TechFullName + ' (' + data.Table[i].JobNo + ')',
+                           start: data.Table[i].SWorking,
+                           end: EWorking
+                           ////id: data.Table[i].ID
+                       });
+                   }
+                   $('#calendar').fullCalendar({
+                       async: false,
+                       header: {
+                           left: 'prev,next',
+                           center: 'title',
+                           right: ''
+                       },
 
-		$('#calendar').fullCalendar({
-			header: {
-				left: 'prev,next',
-				center: 'title',
-				right: ''
-			},
-			defaultDate: '2017-01-18',
-			navLinks: true, // can click day/week names to navigate views
-			editable: true,
-			eventLimit: true, // allow "more" link when too many events
-			events: [
-				{
-					title: 'All Day Event',
-					start: '2016-12-01'
-				},
-				{
-					title: 'Long Event',
-					start: '2016-12-07',
-					end: '2016-12-10'
-				},
-				{
-					id: 999,
-					title: 'Repeating Event',
-					start: '2016-12-09T16:00:00'
-				},
-				{
-					id: 999,
-					title: 'Repeating Event',
-					start: '2016-12-16T16:00:00'
-				},
-				{
-				    title: 'Leader1 (Job201702-0003)',
-				    url: '/Manpower/IndexManpower',
-				    start: '2017-01-05'
-				},
-				{
-				    title: 'Leader2 (J00005)',
-				    start: '2017-01-05'
-				},
-				{
-				    title: 'Leader4 (J00006)',
-				    start: '2017-01-19'
-				},
-				{
-				    title: 'Leader5 (J00005)',
-				    start: '2017-01-19'
-				},
-				{
-				    title: 'Leader7 (J00001)',
-				    start: '2017-01-19'
-				},
-				{
-					title: 'Dinner',
-					start: '2016-12-12T20:00:00'
-				},
-				{
-					title: 'Birthday Party',
-					start: '2016-12-13T07:00:00'
-				},
-				{
-					title: 'Click for Google',
-					url: 'http://google.com/',
-					start: '2016-12-28'
-				}
-			]
-		});
+                       defaultDate: today,
+                       navLinks: true, // can click day/week names to navigate views
+                       editable: true,
+                       eventLimit: true, // allow "more" link when too many events
+                       displayEventTime: false,
+                       events: events
+                   });
+               },
+               error: function (msg) {
+                   alert(msg);
+               }
 
-	});
+           });
+    }
+    $(document).ready(function () {
+        var currentDate = new Date();
+        var currentMonth = currentDate.getMonth() + 1;
+        GetDetail(currentMonth);
+        $('#calendar').on('click', '.fc-next-button', function () {
+            var currentMonth = $('#calendar').fullCalendar('getDate');
+            currentMonth = parseInt(currentMonth.format('M'));
+            GetDetail(currentMonth);
+        });
+        $('#calendar').on('click', '.fc-prev-button', function () {
+            var currentMonth = $('#calendar').fullCalendar('getDate');
+            currentMonth = parseInt(currentMonth.format('M'));
+            alert(currentMonth);
+            GetDetail(currentMonth);
+        });
+    });
+
+		//$('#calendar').fullCalendar({
+		//	header: {
+		//		left: 'prev,next',
+		//		center: 'title',
+		//		right: ''
+		//	},
+		//	defaultDate: '2017-02-18',
+		//	navLinks: true, // can click day/week names to navigate views
+		//	editable: true,
+		//	eventLimit: true, // allow "more" link when too many events
+		//	events: [
+		//		{
+		//			title: 'All Day Event',
+		//			start: '2016-12-01'
+		//		},
+		//		{
+		//			title: 'Long Event',
+		//			start: '2017-02-07',
+		//			end: '2017-02-08'
+		//		},
+		//		{
+		//			id: 999,
+		//			title: 'Repeating Event',
+		//			start: '2017-02-07',
+		//			end: '2017-02-08'
+		//		},
+		//		{
+		//			id: 999,
+		//			title: 'Repeating Event',
+		//			start: '2017-02-07',
+		//			end: '2017-02-07'
+		//		},
+		//		{
+		//		    title: 'Leader1 (Job201702-0003)',
+		//		    start: '2017-02-07T00:00:00',
+		//		    end: '2017-02-08T23:59:00'
+		//		},
+		//		{
+		//		    title: 'Leader2 (J00005)',
+		//		    start: '2017-02-07',
+		//		    end: '2017-02-08'
+		//		},
+		//		{
+		//		    title: 'Leader4 (J00006)',
+		//		    start: '2017-01-19'
+		//		},
+		//		{
+		//		    title: 'Leader5 (J00005)',
+		//		    start: '2017-01-19'
+		//		},
+		//		{
+		//		    title: 'Leader7 (J00001)',
+		//		    start: '2017-01-19'
+		//		},
+		//		{
+		//			title: 'Dinner',
+		//			start: '2016-12-12T20:00:00'
+		//		},
+		//		{
+		//			title: 'Birthday Party',
+		//			start: '2016-12-13T07:00:00'
+		//		},
+		//		{
+		//			title: 'Click for Google',
+		//			url: 'http://google.com/',
+		//			start: '2016-12-28'
+		//		}
+		//	]
+		//});
 
 </script>
 <style>
