--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -43,8 +43,7 @@
             <a href="/BDC/CreateBDC"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd "/></a>
 
                 <div class="topicattach-2">
-                <input id="chkShowAll" type="checkbox" class="chkShowAllinput
-">
+                <input id="chkShowAll" type="checkbox" class="chkShowAllinput" onchange="GetChecked(this)">
                 <label for="chkShowAll" class="chkShowAll">Primary</label>
                 Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
 </td>
