--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -902,6 +902,7 @@ select{
 .chkShowAllinput
 {
     margin-right: 10px;
+    vertical-align:bottom;
 }
  @media screen and (max-width:680px) {
     .topicdetail{
