--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -44,7 +44,7 @@
 
                 <div class="topicattach-2">
                 <input id="chkShowAll" type="checkbox" class="chkShowAllinput" onchange="GetChecked(this)">
-                <label for="chkShowAll" class="chkShowAll">Primary</label>
+                <label for="chkShowAll" class="chkShowAll">Show All</label>
                 Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
 </td>
     </tr>
