--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -204,7 +204,7 @@
                                                         </td>
 
                                                         <td>
-                                                            <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+                                                            <div class="clone-1"><img id="cloneRowIncome"  class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                         </td>
                                                         <td>
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
@@ -239,7 +239,7 @@
                                                             <input type="text" id="txtAmount" disabled class="Amount Number text-size165 txtdisablerow">
                                                         </td>
                                                         <td>
-                                                            <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+                                                            <div class="clone-1"><img id="cloneRowIncome" class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                         </td>
                                                         <td>
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
